ajaxApi.js -> utils.js로 파일명 변경

--- a/src/main/resources/templates/user/login/index.html
+++ b/src/main/resources/templates/user/login/index.html
@@ -62,7 +62,7 @@
           </div>
       </main>
       <script th:src="@{/js/bundle.js}"></script>
-      <script th:src="@{/js/ajaxApi.js}"></script>
+      <script th:src="@{/js/utils.js}"></script>
       <svg th:replace="solution/svg/svg :: svg"></svg>
    </body>
 
