--- a/src/main/resources/templates/solution/index.html
+++ b/src/main/resources/templates/solution/index.html
@@ -36,29 +36,44 @@
                           <span th:text="${list.title}">질문제목을 불러올수 없습니다.</span>
                         </a>
                      </h6>
+                    <h6 class="tt-title" style="margin-left:10px;">
+                       <a>
+                         <span th:text="'re : ' + ${list.review}">ㄴ질문제목을 불러올수 없습니다.</span>
+                       </a>
+                    </h6>
                      <div class="row align-items-center no-gutters hide-desktope">
                         <div class="col-9">
                            <ul class="tt-list-badge">
                               <li class="show-mobile"><a ><span class="tt-color04 tt-badge" th:text="${list.state.name}">상태</span></a></li>
                            </ul>
                         </div>
-                        <div class="col-3 ml-auto show-mobile">
-                           <div class="tt-value"><span th:text="${list.upload_date}">0000-00-00</span></div>
+                        <div class="col-3 ml-auto show-mobile" style="margin-right:30px;">
+                          <div class="tt-value"><span th:text="${#temporals.format(list.upload_date, 'yyyy-MM-dd')}">0000-00-00</span></div>
+                          <!-- <div class="tt-value"><span th:text="${list.upload_date}">0000-00-00</span></div> -->
                         </div>
                      </div>
                   </div>
                   <div class="tt-col-category tt-col-value-large hide-mobile">
-					<span class="tt-color07 tt-badge" th:if="${list.state == 4}" th:text="${list.state.name}">답변완료</span>
-					<span class="tt-color04 tt-badge" th:unless="${list.state == 4}" th:text="${list.state.name}">답변대기</span>
+          					<span class="tt-color07 tt-badge" th:if="${list.state == 4}" th:text="${list.state.name}">답변완료</span>
+          					<span class="tt-color04 tt-badge" th:unless="${list.state == 4}" th:text="${list.state.name}">답변대기</span>
                   	<!-- <span class="tt-color04 tt-badge" th:text="${list.state.name}">상태</span> -->
                   </div>
-                  <div class="tt-col-value-large hide-mobile"><span th:text="${list.upload_date}">0000-00-00</span></div>
+                  <div class="tt-col-value hide-mobile" style="width:130px;">
+                    <span th:text="${#temporals.format(list.upload_date, 'yyyy-MM-dd')}">0000-00-00</span>
+                  </div>
                </div>
             </div>
          </div>
          </div>
       </main>
       <script th:src="@{/js/bundle.js}"></script>
+      <script th:src="@{/js/utils.js}"></script>
       <svg th:replace="solution/svg/svg :: svg"></svg>
    </body>
+   <script>
+     function convertDate(date){
+       console.log("date : ",  date);
+
+     }
+   </script>
 </html>
