--- a/src/main/resources/templates/user/login/index.html
+++ b/src/main/resources/templates/user/login/index.html
@@ -25,6 +25,13 @@
                               <label for="loginUserPassword">Password</label>
                               <input type="password" name="password" class="form-control" placeholder="****" required>
                           </div>
+                          <div class="form-group">
+                              <label for="loginUserPassword">Role</label>
+                              <select class="form-control" name="type">
+                                  <option value="1">고객</option>
+                                  <option value="2">관리자</option>
+                              </select>
+                          </div>
                           <p>아직 회원이 아니신가요?<a href="#" class="tt-underline" style="float:right;">회원가입</a></p>
                           <div class="row">
                               <div class="col">
@@ -71,6 +78,7 @@
       postAPI("/solution/user/login", JSON.stringify({
         "username" : $("input[name=username]").val(),
         "password" : $("input[name=password]").val()
+        "type" : $("select[name=type]").val()
       }), function(result){
         if(result) window.location.href="/solution";
         else window.alert("정보가 일치하지 않습니다.");
