--- a/src/main/resources/templates/solution/apply.html
+++ b/src/main/resources/templates/solution/apply.html
@@ -16,7 +16,7 @@
                       <div class="form-group">
                         <label for="inputTopicTitle">등록 닉네임</label>
                         <div class="tt-value-wrapper">
-                            <!-- <input type="text" name="nickname" class="form-control" placeholder="제목을 입력하세요"> -->
+                            <input type="text" name="nickname" class="form-control" placeholder="제목을 입력하세요">
                         </div>
                         <div class="tt-note">자신의 질문을 검색할때 사용됩니다.</div>
                       </div>
