유저 회원가입 추가

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5844,7 +5844,7 @@ hr + .row-object-inline {
   .tt-badge.tt-color20 {
     background-color: #ed9731; }
   .tt-badge.tt-color21 {
-    background-color: #8781bd; }
+    background-color: #999999; }
 
 .tt-list-badge {
   display: -webkit-inline-box;
