--- a/src/main/resources/templates/user/login/index.html
+++ b/src/main/resources/templates/user/login/index.html
@@ -32,7 +32,7 @@
                                   <option value="2">관리자</option>
                               </select>
                           </div>
-                          <p>아직 회원이 아니신가요?<a href="#" class="tt-underline" style="float:right;">회원가입</a></p>
+                          <p>아직 회원이 아니신가요?<a href="/solution/user/signup" class="tt-underline" style="float:right;">회원가입</a></p>
                           <div class="row">
                               <div class="col">
                                   <div class="form-group">
