--- a/src/main/resources/templates/solution/widget/pc-menu.html
+++ b/src/main/resources/templates/solution/widget/pc-menu.html
@@ -112,7 +112,7 @@
         <div class="col-auto ml-auto">
           <div class="tt-account-btn">
               <a href="/solution/user/login" class="btn btn-primary" th:if="${session.user?.username == null}">Log in</a>
-              <a href="page-signup.html" class="btn btn-secondary" th:if="${session.user?.username == null}">Sign up</a>
+              <a href="/solution/user/signup" class="btn btn-secondary" th:if="${session.user?.username == null}">Sign up</a>
               <a href="/solution/user/logout" class="btn btn-secondary" th:if="${session.user?.username != null}">Log out</a>
           </div>
         </div>
