list 클릭시 서버에 전달할 데이터 추가

--- a/src/main/resources/templates/solution/apply.html
+++ b/src/main/resources/templates/solution/apply.html
@@ -10,7 +10,7 @@
             <h1 class="tt-title-border">
                 새 문제등록
             </h1>
-            <form class="form-default form-create-topic" method="POST" action="/solution/apply" enctype="multipart/form-data">
+            <form class="form-default form-create-topic" method="POST" action="/solution/apply?min=0&max=10&state=0" enctype="multipart/form-data">
               <div class="row" >
                   <div class="col-md-4">
                     <div class="form-group">
