실시간 소켓 채팅-> 사진구현완료

--- a/src/main/resources/templates/solution/detail.html
+++ b/src/main/resources/templates/solution/detail.html
@@ -26,7 +26,7 @@
                      <div class="tt-all-avatar">
                         <div class="tt-list-avatar js-init-scroll" id="chat-row">
                         </div>
-                        <form class="pt-editor form-default" id="chat-form">
+                        <form class="pt-editor form-default" id="chat-form" enctype="multipart/form-data">
                            <h6 class="pt-title">질문에 대해 궁금한점을 물어보세요.</h6>
                            <div class="form-group">
                               <textarea id="chat-message" class="form-control" rows="5" placeholder="내용을 입력해주세요."></textarea>
